--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "firebaseui": "^4.6.1",
     "formik": "^2.1.5",
     "i": "^0.3.6",
+    "lodash.debounce": "^4.0.8",
+    "lodash.throttle": "^4.1.1",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
     "react-dom": "^16.13.0",
