--- a/package.json
+++ b/package.json
@@ -11,27 +11,32 @@
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.5.4",
+    "autoprefixer": "^10.0.2",
     "firebase": "^7.18.0",
     "firebaseui": "^4.6.1",
     "formik": "^2.1.5",
     "i": "^0.3.6",
     "lodash.debounce": "^4.0.8",
     "lodash.throttle": "^4.1.1",
+    "postcss": "^8.1.8",
     "prettier": "^1.19.1",
     "react": "^16.13.0",
+    "react-awesome-button": "^6.5.1",
     "react-dom": "^16.13.0",
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
     "socket.io-client": "^2.3.0",
-    "styled-components": "^5.0.1"
+    "styled-components": "^5.0.1",
+    "tailwindcss": "^2.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts --max_old_space_size=4096 build",
-    "deploy-production": "react-scripts build && scp -r ./build/* root@165.22.206.242:/var/www/junglespeed.ml/html",
+    "start": "npm run watch:css && react-scripts start",
+    "build": "npm run watch:css && react-scripts build",
+    "deploy-production": "yarn build && scp -r ./build/* root@165.22.206.242:/var/www/junglespeed.ml/html",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "watch:css": "postcss src/assets/tailwind.css -o src/assets/main.css"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -47,5 +52,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "postcss-cli": "^8.3.0"
   }
 }
