--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^16.13.0",
     "react-awesome-button": "^6.5.1",
     "react-dom": "^16.13.0",
+    "react-elastic-carousel": "^0.9.5",
     "react-loader-spinner": "^3.1.14",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.0",
